Update: main - Diff report completed

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 
                         <li><a href='diff_p1_update.html'>Unified diff core:dev vs beta:origin/p1_update</a></li>
 
+                        <li><a href='diff_pw_0_21_3.html'>Unified diff core:dev vs beta:origin/pw_0_21_3</a></li>
+
                         <li><a href='diff_refact_usb_for_core_2021_8.html'>Unified diff core:dev vs beta:origin/refact_usb_for_core_2021_8</a></li>
 
                         <li><a href='diff_regulation_mode.html'>Unified diff core:dev vs beta:origin/regulation_mode</a></li>
