--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 
                         <li><a href='diff_correct_climate.html'>Unified diff core:dev vs beta:origin/correct_climate</a></li>
 
+                        <li><a href='diff_device_avail.html'>Unified diff core:dev vs beta:origin/device_avail</a></li>
+
                         <li><a href='diff_device_availability.html'>Unified diff core:dev vs beta:origin/device_availability</a></li>
 
                         <li><a href='diff_fix_250.html'>Unified diff core:dev vs beta:origin/fix_250</a></li>
@@ -33,8 +35,6 @@
                         <li><a href='diff_huub66.html'>Unified diff core:dev vs beta:origin/huub66</a></li>
 
                         <li><a href='diff_main.html'>Unified diff core:dev vs beta:origin/main</a></li>
-
-                        <li><a href='diff_p1_update.html'>Unified diff core:dev vs beta:origin/p1_update</a></li>
 
                         <li><a href='diff_refact_usb_for_core_2021_8.html'>Unified diff core:dev vs beta:origin/refact_usb_for_core_2021_8</a></li>
 
